Made all tests use jUnit5, cleared the unused imports and formatted the code