@@ -4,12 +4,11 @@ import models.contracts.Board;
 import commands.showCommands.ShowAllTeamBoardsCommand;
 import core.BoardRepositoryImpl;
 import core.contracts.BoardRepository;
+import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import java.util.List;
 
-import java.util.Arrays;
-
-import static org.junit.jupiter.api.Assertions.assertEquals;
 
 public class ShowAllTeamBoardsCommandTest {
     BoardRepository boardRepository = new BoardRepositoryImpl();
@@ -27,9 +26,9 @@ public class ShowAllTeamBoardsCommandTest {
        boardRepository.createTeam(teamName);
             Board board1 = boardRepository.createBoard(boardName);
             boardRepository.findTeamByName(teamName).addBoard(board1);
-            String result = showAllTeamBoardsCommand.execute(Arrays.asList(teamName));
-            String result2 = String.format("These are all boards for team with name Power5.\n---BOARDS---\n---Board---\nnewBoard\nThere are no tasks on this board.\n");
-            assertEquals(result2, result);
+            String result = showAllTeamBoardsCommand.execute(List.of(teamName));
+            String result2 = "These are all boards for team with name Power5.\n---BOARDS---\n---Board---\nnewBoard\nThere are no tasks on this board.\n";
+            Assertions.assertEquals(result2, result);
         }
     }
 
